clarified logo replace rules, enabled favicon, improved favicon image

--- a/adhocracy/offenekommune_theme/theme.html
+++ b/adhocracy/offenekommune_theme/theme.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-XRDS-Location" content="http://test.adhocracy.lan:5002/openid/xrds" />
     <link rel="stylesheet" type="text/css" media="all" href="./static/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" media="all" href="./static/stylesheets/style_custom.css" />
-    <link rel="icon" href="http://adhocracy.lan:5002/favicon.ico" type="image/png" />
+    <link rel="shortcut icon" href="/static_theme/static/favicon.ico" />
     <script type="text/javascript" src="./static/javascripts/jquery.js"></script>
     <script type="text/javascript" src="./static/javascripts/slides.min.jquery.js" charset="utf-8"></script>
     <script type="text/javascript" src="./static/javascripts/jquery.tools.min.js" charset="utf-8"></script>
